--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "path-to-regexp": "^8.2.0",
