--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.62.0",
     "sass": "^1.89.1",
     "tailwind-merge": "^3.3.1"
   },
